scripts/nullaway/annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8.txt
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:45: error: [NullAway] assigning @Nullable expression to @NonNull field
		op1 = null;
		    ^
    (see http://t.uber.com/nullaway )
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:46: error: [NullAway] assigning @Nullable expression to @NonNull field
		op2 = null;
		    ^
    (see http://t.uber.com/nullaway )
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:57: error: [NullAway] assigning @Nullable expression to @NonNull field
		op2 = null;
		    ^
    (see http://t.uber.com/nullaway )
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:47: error: [NullAway] initializer method does not guarantee @NonNull fields memory (line 33), srcHandlers (line 40), dstHandlers (line 41) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public CpuCore()
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:55: error: [NullAway] assigning @Nullable expression to @NonNull field
		memory = null;
		       ^
    (see http://t.uber.com/nullaway )
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java:50: error: [NullAway] initializer method does not guarantee @NonNull field writer (line 45) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Monitor(Cpu cpu, AddressSpace memory)
	       ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors
